Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7129

Can't start catalogd in tests under UBSAN

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 3.0
    • Impala 3.0
    • Infrastructure
    • None
    • ghx-label-2

    Description

      https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/2377/testReport/junit/custom_cluster.test_admission_controller/TestAdmissionController/test_require_user/

      This custom cluster test failed

      https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/2377/artifact/Impala/logs_static/logs/custom_cluster_tests/catalogd-error.log/*view*/

      UndefinedBehaviorSanitizer: failed to read suppressions file '/home/ubuntu/Impala/be/build/debug/service/./bin/ubsan-suppressions.txt'

      A number of other tests failed, too, and I suspect it's https://github.com/apache/impala/commit/48625335d220566a1d69e65fb34bfca9a7dc3cff that broke it. I guess maybe IMPALA_HOME is not set in some tests?

      Attachments

        Activity

          People

            philip Philip Martin
            jbapple Jim Apple
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: